--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"way/generators": "2.*",
 		"fzaninotto/faker": "1.3.*@dev",
 		"chumper/datatable": "2.*",
-		"baum/baum": "~1.0"
+		"baum/baum": "~1.0",
+		"cviebrock/eloquent-sluggable": "2.*"
 	},
 	"autoload": {
 		"classmap": [
