--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
 		"way/database": "dev-master",
 		"doctrine/dbal": "~2.3",
 		"zizaco/entrust": "1.2.*@dev",
-		"zizaco/confide": "~4.0@dev"
+		"zizaco/confide": "~4.0@dev",
+                "mmanos/laravel-social": "~1.0",
+                "greggilbert/recaptcha": "~1.0"
 	},
 	"autoload": {
 		"classmap": [
