--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"zizaco/entrust": "1.2.*@dev",
 		"zizaco/confide": "~4.0@dev",
                 "mmanos/laravel-social": "~1.0",
-                "greggilbert/recaptcha": "~1.0"
+                "greggilbert/recaptcha": "~1.0",
+		"barryvdh/laravel-debugbar": "~1.8"
 	},
 	"autoload": {
 		"classmap": [
